dockerisations du front
* il a été push sur azure sur le nom de taguiafront

--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,7 @@
         <h1>Bulletin Météo en Audio</h1>
         <form id="weather-form">
             <input type="text" id="city" placeholder="Entrez le nom de la ville" required>
-            <button type="submit">Obtenir le bulletin météo</button>
+            <button type="submit">Mateo Bullentin </button>
         </form>
         <div id="audio-container"></div>
     </div>
